# fxsharing

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  gunicorn.conf.py  main.py  manage.py  package.json  pyproject.toml  version.json
.github/: CODEOWNERS
.github/workflows/: build-and-push-to-gar.yml  deploy-mozcloud.yml  test.yml
fxsharing/: asgi.py  celery.py  settings.py  soft_delete.py  urls.py  wsgi.py
fxsharing/shares/: admin.py  apps.py  cinder_policies.py  cinder_schema.py  conftest.py  context_processors.py  metrics.py  middleware.py  models.py  share_schema.py  signals.py  tasks.py  tests.py  url_safety.py  urls.py  views.py
fxsharing/shares/migrations/: 0001_initial.py  0002_share_nested_share.py  0002_share_type.py  0003_rename_nested_share_share_parent_share.py  0004_alter_share_parent_share.py  0005_remove_share_fxa_id.py  0006_share_user.py  0006_update_share_and_link_models.py  0007_merge_20260504_1540.py  0008_link_favicon_image_url_and_more.py  0008_link_favicon_url.py  0008_share_deleted_at_alter_share_status.py  0009_migrate_deleted_status_to_deleted_at.py  0010_merge_20260522_1516.py  0011_deadlettertask.py  0012_alter_link_preview_description_and_more.py  0012_annotation.py  0012_merge_20260604_1442.py  0012_remove_share_idempotency_key.py  0013_comment.py  0013_remove_link_favicon_image_url.py  0013_remove_share_idempotency_key.py
fxsharing/users/: adapter.py  admin.py  apps.py  models.py  tests.py  urls.py
fxsharing/users/migrations/: 0001_initial.py  0002_user_deleted_at.py  0003_user_badness_counter.py
scripts/: generate_env.py  mock_cinder.py  run_celery.sh
static/: fluent-setup.mjs  index.mjs
static/components/: moz-share.mjs  telemetry.mjs
static/components/moz-badge/: index.mjs  moz-badge.mjs  moz-badge.stories.mjs
static/components/moz-box-button/: README.mdx  index.mjs  moz-box-button.mjs  moz-box-button.stories.mjs
static/components/moz-box-group/: README.mdx  index.mjs  moz-box-group.mjs  moz-box-group.stories.mjs
static/components/moz-box-item/: README.mdx  index.mjs  moz-box-item.mjs  moz-box-item.stories.mjs
static/components/moz-box-link/: README.mdx  index.mjs  moz-box-link.mjs  moz-box-link.stories.mjs
static/components/moz-breadcrumb-group/: index.mjs  moz-breadcrumb-group.mjs  moz-breadcrumb-group.stories.mjs
static/components/moz-button/: README.mdx  index.mjs  moz-button.mjs  moz-button.stories.mjs
static/components/moz-button-group/: README.mdx  index.mjs  moz-button-group.mjs  moz-button-group.stories.mjs
static/components/moz-card/: README.mdx  (+3 more)
static/css/: design-tokens.json  text-and-typography.css  tokens-brand.css  tokens-figma-primitives.json  tokens-figma-theme.json  tokens-shared.css  tokens-table.mjs
static/dependencies/: acorn-icon.mjs  lit-select-control.mjs  lit-utils.mjs  lit.all.mjs  moz-box-common.css  moz-input-common.css  moz-input-text.css  setting-control.mjs  setting-element.mjs  text-and-typography.css  tokens-brand.css  tokens-shared.css  tokens-table.css  tokens-table.mjs
static/docs/: README.figma-code-connect.mdx  README.lit-guide.mdx  README.other-widgets.mdx  README.reusable-widgets.mdx  README.storybook.mdx  README.typography.mdx  README.xul-and-html.mdx
static/js/: lit-select-control.ts  lit-utils.ts  moz-share.mjs
static/scripts/: fxa-login.mjs
static/styles/: annotation.css  base.css  common-shared.css  dev_login.css  error.css  expired.css  fxa_login.css  landing.css  moz-share.css
(+148 files in other folders)
