[project]
name = "fxsharing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.3",
    "django-environ>=0.11.0",
    "dockerflow>=2026.3.0",
    "gunicorn>=23.0.0",
    "jsonschema>=4.26.0",
    "psycopg[binary]>=3.2.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "fxsharing.settings"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".git .venv"
testpaths = ["fxsharing"]

[tool.ruff]
exclude = ["**/migrations"]

[tool.ruff.lint]
select = [
    "S",  # flake8-bandit
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.per-file-ignores]
"**/tests.py" = ["S101", "S105", "S311"]
