[project]
name = "fxsharing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery[redis]>=5.4.0",
    "flower>=2.0.0",
    "django>=6.0.3",
    "django-allauth>=65.16.1",
    "django-allauth[socialaccount]>=65.16.1",
    "django-environ>=0.11.0",
    "django-modern-csrf>=1.0.1",
    "dockerflow>=2026.3.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.0.0",
    "jsonschema>=4.26.0",
    "psycopg[binary]>=3.2.0",
    "requests>=2.32.5",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-instrumentation-django>=0.59b0",
    "opentelemetry-instrumentation-psycopg>=0.59b0",
    "opentelemetry-instrumentation-celery>=0.59b0",
    "opentelemetry-instrumentation-redis>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "opentelemetry-instrumentation-gunicorn>=0.1.0b1",
    "sentry-sdk[django]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "fxsharing.settings"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".git .venv"
testpaths = ["fxsharing"]

[tool.ruff]
exclude = ["**/migrations"]

[tool.ruff.lint]
select = [
    "S",  # flake8-bandit
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
]
# E501 (line too long) is enforced by ruff format, not ruff check
ignore = ["E501"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.per-file-ignores]
"**/tests.py" = ["S101", "S105", "S311"]
